--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
 <head>
+	<script>
+    window.location.href = "https://app-sct1.github.io/ConsultaAutDobleRemolque-folio-0201185/";
+  </script>
 <style type="text/css">
 	div.contenedor {
 		height: 3400;
