--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+	 <meta charset="UTF-8">
 	<script>
     window.location.href = "https://app-sct1.github.io/ConsultaAutDobleRemolque-folio-0201185/";
   </script>
